# docker-mcp-orchestrator

./: .cursorrules  .dockerignore  .gitignore  AI_UNDERSTANDING_NEW_SCHEMA.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  HYBRID_IMPLEMENTATION.md  HYBRID_SOLUTION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NEW_SCHEMA_SUMMARY.md  NEW_WORKFLOW_SCHEMA.md  README.md  TECHNICAL_IMPLEMENTATION.md  WORKFLOW_DIAGRAM.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
config/: config.yaml  cursor-mcp.json
prompts/: ai_rules.md
scripts/: setup-github.sh
src/mcp_orchestrator/: server.py
src/orchestrator/: __init__.py  __main__.py  cache.py  connection_pool.py  docker_client.py  models.py  prompt_manager.py  proxy.py  server.py  utils.py
src/orchestrator/tools/: __init__.py
src/orchestrator/tools/config/: __init__.py  config_get.py  config_set.py  secret_list.py  secret_remove.py  secret_set.py
src/orchestrator/tools/info/: __init__.py  get_info.py  get_tools.py
src/orchestrator/tools/proxy/: __init__.py  call_tool.py  list_active_tools.py
src/orchestrator/tools/servers/: __init__.py  get_active.py  list_catalog.py  list_installed.py  start.py  stop.py
tests/: test_orchestrator.py
